[gd_scene load_steps=5 format=3 uid="uid://j1imudlsimj5"]

[ext_resource type="Texture2D" uid="uid://d1bim78hf3q5n" path="res://images/rotation.png" id="1"]
[ext_resource type="Script" path="res://scenes/Token.gd" id="2"]
[ext_resource type="Texture2D" uid="uid://0qofcdjfc47x" path="res://images/hex_deck.png" id="3"]
[ext_resource type="PackedScene" uid="uid://co7c0y0bbbsgn" path="res://scenes/HexArea.tscn" id="5"]

[node name="Token" type="Node2D" groups=["tokens"]]
script = ExtResource("2")

[node name="Sprite" type="Sprite2D" parent="."]
z_index = -1
scale = Vector2(0.47, 0.47)
texture = ExtResource("3")

[node name="RotationIndicator" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.752941)
scale = Vector2(3, 3)
texture = ExtResource("1")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.25
one_shot = true

[node name="HexArea" parent="." instance=ExtResource("5")]

[node name="HexAreaWoundAdd" parent="." instance=ExtResource("5")]
visible = false
position = Vector2(-200, 0)
scale = Vector2(0.6, 0.6)
input_pickable = false

[node name="Sprite" type="Sprite2D" parent="HexAreaWoundAdd"]
self_modulate = Color(0.752941, 0, 0, 1)
z_index = 3
scale = Vector2(0.47, 0.47)
texture = ExtResource("3")

[node name="CenterContainer" type="CenterContainer" parent="HexAreaWoundAdd/Sprite"]
use_top_left = true

[node name="Label" type="Label" parent="HexAreaWoundAdd/Sprite/CenterContainer"]
layout_mode = 2
text = "+"

[node name="HexAreaWoundRemove" parent="." instance=ExtResource("5")]
visible = false
position = Vector2(200, 0)
scale = Vector2(0.6, 0.6)
input_pickable = false

[node name="Sprite" type="Sprite2D" parent="HexAreaWoundRemove"]
self_modulate = Color(0.752941, 0, 0, 1)
z_index = 3
scale = Vector2(0.47, 0.47)
texture = ExtResource("3")

[node name="CenterContainer" type="CenterContainer" parent="HexAreaWoundRemove/Sprite"]
use_top_left = true

[node name="Label" type="Label" parent="HexAreaWoundRemove/Sprite/CenterContainer"]
layout_mode = 2
text = "-"

[node name="LongTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="CenterContainer" type="CenterContainer" parent="."]
use_top_left = true

[node name="WoundCount" type="Label" parent="CenterContainer"]
layout_mode = 2

[node name="Tween" type="Tween" parent="."]
_import_path = NodePath("")
unique_name_in_owner = false
process_mode = 0
process_priority = 0
process_physics_priority = 0
process_thread_group = 0
editor_description = ""
script = null

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="clicked" from="HexArea" to="." method="_on_HexArea_clicked"]
[connection signal="unclicked" from="HexArea" to="." method="_on_HexArea_unclicked"]
[connection signal="clicked" from="HexAreaWoundAdd" to="." method="_on_HexAreaWoundAdd_clicked"]
[connection signal="clicked" from="HexAreaWoundRemove" to="." method="_on_HexAreaWoundRemove_clicked"]
[connection signal="timeout" from="LongTimer" to="." method="_on_LongTimer_timeout"]
